[gd_scene load_steps=19 format=3 uid="uid://tg8jcmrwhol"]

[ext_resource type="Script" path="res://forgot_password.gd" id="1_gvvra"]
[ext_resource type="Texture2D" uid="uid://d1bj5rl7oy22j" path="res://sprites/2forgot.png" id="2_g12fj"]
[ext_resource type="FontFile" uid="uid://cxo00kjcsmt7t" path="res://addons/fonts/BalooBhaijaan-Regular.ttf" id="4_gwbdx"]
[ext_resource type="FontFile" uid="uid://ba8tt4gxqogjq" path="res://addons/fonts/FrancoisOne.ttf" id="5_yxw0a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wpckr"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5ywu"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iv30v"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2ct2"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yypvv"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wnjf"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vfpku"]
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_it8t8"]
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_53c0c"]
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ghxct"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uyhy6"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6fxe"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kn5v1"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2vpk6"]
draw_center = false
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="forgotPassword_control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gvvra")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_g12fj")
expand_mode = 1

[node name="forgotpasswordPanel" type="TextureRect" parent="MarginContainer/background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -249.0
offset_right = 643.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="email" type="Label" parent="MarginContainer/background/forgotpasswordPanel"]
layout_mode = 0
offset_left = 164.0
offset_top = 132.0
offset_right = 576.0
offset_bottom = 274.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_gwbdx")
theme_override_font_sizes/font_size = 32
text = "Email"

[node name="editEmail" type="TextEdit" parent="MarginContainer/background/forgotpasswordPanel/email"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 36.0
offset_right = 7.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_wpckr")

[node name="LineEdit" type="LineEdit" parent="MarginContainer/background/forgotpasswordPanel/email/editEmail"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 1.0
offset_right = -6.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_q5ywu")
theme_override_styles/focus = SubResource("StyleBoxFlat_iv30v")
theme_override_styles/read_only = SubResource("StyleBoxFlat_y2ct2")
placeholder_text = "Enter your email account..."
max_length = 50

[node name="sendEmail" type="Button" parent="MarginContainer/background/forgotpasswordPanel/email"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 147.0
offset_right = -12.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_gwbdx")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_yypvv")
theme_override_styles/hover = SubResource("StyleBoxFlat_6wnjf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vfpku")
theme_override_styles/disabled = SubResource("StyleBoxFlat_it8t8")
theme_override_styles/focus = SubResource("StyleBoxFlat_53c0c")
text = "Send Email"

[node name="goBack" type="Button" parent="MarginContainer/background"]
layout_mode = 2
offset_left = 3.0
offset_top = 2.0
offset_right = 298.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0.581033, 0.581033, 0.581033, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.254902, 0.47451, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_yxw0a")
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_ghxct")
theme_override_styles/hover = SubResource("StyleBoxFlat_uyhy6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v6fxe")
theme_override_styles/disabled = SubResource("StyleBoxFlat_kn5v1")
theme_override_styles/focus = SubResource("StyleBoxFlat_2vpk6")
text = "â†© Go Back to Login"

[connection signal="button_up" from="MarginContainer/background/forgotpasswordPanel/email/sendEmail" to="." method="_on_send_email_button_up"]
